@@ -27,7 +27,7 @@ if(($FindBin::Bin // '') ne '') {
 use Schedule::Connect ();
 use Schedule::Helpers qw(env_to_array is_nonnegative);
 
-our $VERSION = '5.0';
+our $VERSION = '5.1';
 
 # Global/State variables:
 
@@ -74,6 +74,10 @@ if(exists($ENV{'SCHEDULE_SERVER_OPTS'})) {
 } elsif(exists($ENV{'SCHEDULE_OPTS'})) {
 	unshift(@ARGV, &env_to_array('SCHEDULE_OPTS'))
 }
+
+eval {
+	END { $s->did_alpha() || $s->exec_alpha() }
+};
 
 # Parse Options:
 
